--- a/taller-angular/src/app/course/course.component.html
+++ b/taller-angular/src/app/course/course.component.html
@@ -13,7 +13,7 @@
         <tbody>
             <tr *ngFor="let course of courses">
                 <td>{{ course.id }}</td>
-                <td><a href = "course.paginaweb" target = "_blank">{{ course.name }}</a></td>
+                <td><a [href]="course.webpage" target = "_blank">{{ course.name }}</a></td>
                 <td>{{ course.channel }}</td>
                 <td>{{ course.seasons }}</td>
             </tr>
